--- a/packages/scss-sugars/lib/_constants.scss
+++ b/packages/scss-sugars/lib/_constants.scss
@@ -1,3 +1,6 @@
+$unit-strings: 'px' 'cm' 'mm' '%' 'ch' 'pica' 'in' 'em' 'rem' 'pt' 'pc' 'ex' 'vw' 'vh' 'vmin' 'vmax';
+$unit-vals: 1px  1cm  1mm  1%  1ch  1pica  1in  1em  1rem  1pt  1pc  1ex  1vw  1vh  1vmin  1vmax;
+
 $linear-channel-values: (
   0,
   .0003035269835488375,
